; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_write.c_sati_write_12_translate_command.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_sati_write.c_sati_write_12_translate_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@SATI_FAILURE_CHECK_RESPONSE_DATA = common dso_local global i32 0, align 4
@SATI_SEQUENCE_WRITE_12 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sati_write_12_translate_command(%struct.TYPE_5__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32* @sati_cb_get_cdb_address(i8* %10)
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @sati_get_cdb_byte(i32* %12, i32 6)
  %14 = shl i32 %13, 24
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @sati_get_cdb_byte(i32* %15, i32 7)
  %17 = shl i32 %16, 16
  %18 = or i32 %14, %17
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @sati_get_cdb_byte(i32* %19, i32 8)
  %21 = shl i32 %20, 8
  %22 = or i32 %18, %21
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @sati_get_cdb_byte(i32* %23, i32 9)
  %25 = or i32 %22, %24
  store i32 %25, i32* %9, align 4
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i64 @sati_device_state_stopped(%struct.TYPE_5__* %26, i8* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %3
  %31 = load i32, i32* @SATI_FAILURE_CHECK_RESPONSE_DATA, align 4
  store i32 %31, i32* %4, align 4
  br label %41

32:                                               ; preds = %3
  %33 = load i32, i32* @SATI_SEQUENCE_WRITE_12, align 4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 4
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %37 = load i8*, i8** %6, align 8
  %38 = load i8*, i8** %7, align 8
  %39 = load i32, i32* %9, align 4
  %40 = call i32 @sati_write_32_bit_lba_translate_command(%struct.TYPE_5__* %36, i8* %37, i8* %38, i32 %39, i32 11)
  store i32 %40, i32* %4, align 4
  br label %41

41:                                               ; preds = %32, %30
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32* @sati_cb_get_cdb_address(i8*) #1

declare dso_local i32 @sati_get_cdb_byte(i32*, i32) #1

declare dso_local i64 @sati_device_state_stopped(%struct.TYPE_5__*, i8*) #1

declare dso_local i32 @sati_write_32_bit_lba_translate_command(%struct.TYPE_5__*, i8*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
